<resources>
    <string name="app_name">DemoApp</string>
    <string name="year">Year</string>
    <string name="director">Director</string>
    <string name="language">Language</string>
    <string name="rated">Rated</string>
    <string name="runtime">Runtime</string>
    <string name="released">Released</string>
    <string name="actors">Actors</string>
    <string name="awards">Awards</string>
    <string name="country">Country</string>
    <string name="writers">Writers</string>
    <string name="genre">Genre</string>
    <string name="plot">Plot</string>
    <string name="imdbid">imdbID</string>
    <string name="imdbrating">imdbRating</string>
    <string name="imdbvotes">imdbVotes</string>
    <string name="dvd">DVD</string>
    <string name="type">Type</string>
    <string name="boxoffice">BoxOffice</string>
    <string name="production">Production</string>
    <string name="metascore">Metascore</string>
    <string name="website">Website</string>
    <string name="rating">Ratings</string>
    <string name="no_internet_connection">No internet connection found. Please try again.</string>
    <string name="MovieName">MovieName</string>
    <string name="MovieDirector">MovieDirector</string>
    <string name="api_key">e4bab19b</string>
    <string name="loading">Loading...</string>
</resources>
